<resources>
    <string name="app_name">ReCyclo</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="halo_sobat">Halo Sobat \nSelamat Datang Kembali</string>
    <string name="marketplace">marketplace untuk produk daur ulang dan para pengrajin barang daur ulang</string>
    <string name="title_login">Masuk Akun Anda</string>
    <string name="title_register">Daftar Akun Baru</string>
    <string name="login_email"><font size="15">Masukan email anda</font></string>
    <string name="login_password"><font size="15">Masukan password </font></string>
    <string name="sign_in">Masuk</string>
    <string name="belum_punya_akun">Belum memiliki akun ?</string>
    <string name="nama">Nama :</string>
    <string name="email">Email :</string>
    <string name="address">Alamat :</string>
    <string name="address_hint"><font size="15">Masukan alamat lengkap anda</font></string>
    <string name="login_title">Masuk Akun Anda</string>
    <string name="phone">Nomor Handphone :</string>
    <string name="phone_hint"><font size="15">Masukan Nomor Handphone</font></string>
    <string name="city">Kota :</string>
    <string name="city_hint"><font size="15">Masukan Kota Anda</font></string>
    <string name="sign_up">Daftar</string>
    <string name="password_hint"><font size="15">Masukan Password</font></string>
    <string name="hint_Search"><font size="13">Cari produk yang anda inginkan...</font></string>
    <string name="produk_terlaris">Produk Terlaris</string>
    <string name="title_product">Sampah Daur Ulang</string>
    <string name="cta_dashboard"><font size="8">Edit</font></string>
    <string name="tabs">tabs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Barang Daur Ulang</string>
    <string name="tab_text_2">Sampah daur ulang</string>
    <string name="todo">add</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="price_prod">Harga Produk</string>
    <string name="name_of_prod">Enter name of the product</string>
    <string name="text_name_prod">Nama Produk :</string>
    <string name="enter_your_price">Enter your product price</string>
    <string name="jenis_barang">Jenis Barang :</string>
    <string name="stok_barang">Stok Barang :</string>
    <string name="enter_product_stock">Enter product stock</string>
    <string name="gambar_produk">Gambar Produk :</string>
    <string name="list_images">list images</string>
    <string name="simpan">Simpan</string>
    <string name="enter_desc">enter desc</string>
    <string name="deskripsi">deskripsi</string>
    <string name="jumlah_barang">Jumlah Barang</string>
    <string name="kirim_gambar">kirim gambar</string>
    <string name="loading_Text">Tunggu..</string>
    <string name="register_password">Password :</string>
    <string name="logout">Logout</string>
    <string name="profil">Profil</string>
    <string name="masukan_nama_anda">Masukan nama anda</string>
    <string-array name="KindspinnerItems">
            <item>Plastik</item>
            <item>Kardus</item>
            <item>Kaleng</item>
            <item>Kertas</item>
    </string-array>
</resources>