<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.authentication.register.RegisterActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:scaleType="fitCenter"

    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingVertical="103dp"

        >



        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="107dp"
            android:layout_marginBottom="20dp"
            android:thicknessRatio="1.9"
            app:cardCornerRadius="41dp"
            app:cardElevation="4dp"
            android:paddingVertical="58dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingHorizontal="10dp"
           >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="32dp">

                <TextView
                    android:id="@+id/masuk_ke_ak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="43dp"
                    android:layout_marginTop="44dp"
                    android:layout_marginEnd="38dp"
                    android:text="@string/title_register"
                    android:textAppearance="@style/masuk_ke_ak"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/name_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="38dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/nama"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/masuk_ke_ak" />

                <EditText
                    android:id="@+id/register_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"

                    android:background="@drawable/input_auth"
                    android:hint="@string/login_email"
                    android:paddingVertical="10dp"

                    android:paddingLeft="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/name_product"

                    tools:layout_editor_absoluteX="24dp" />

                <TextView
                    android:id="@+id/tv_reg_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_name" />

                <EditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"

                    android:background="@drawable/input_auth"
                    android:hint="@string/login_email"
                    android:paddingVertical="10dp"

                    android:paddingLeft="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_reg_email"

                    tools:layout_editor_absoluteX="24dp" />


                <TextView
                    android:id="@+id/tv_reg_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/address"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_email" />

                <EditText
                    android:id="@+id/register_address"
                    android:layout_width="match_parent"
                    android:layout_height="102dp"
                    android:layout_marginTop="16dp"

                    android:background="@drawable/input_auth_address"
                    android:hint="@string/address_hint"
                    android:paddingVertical="10dp"

                    android:paddingLeft="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_reg_address"

                    tools:layout_editor_absoluteX="24dp" />

                <TextView
                    android:id="@+id/tv_reg_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/phone"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_address" />

                <EditText
                    android:id="@+id/register_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"

                    android:background="@drawable/input_auth"
                    android:hint="@string/phone_hint"

                    app:layout_constraintTop_toBottomOf="@+id/tv_reg_phone"
                    android:paddingVertical="10dp"

                    android:paddingLeft="20dp"
                    tools:layout_editor_absoluteX="24dp" />

                <TextView
                    android:id="@+id/tv_reg_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/city"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_phone" />

                <EditText
                    android:id="@+id/register_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"

                    android:background="@drawable/input_auth"
                    android:hint="@string/city_hint"

                    app:layout_constraintTop_toBottomOf="@+id/tv_reg_city"
                    android:paddingVertical="10dp"

                    android:paddingLeft="20dp"
                    tools:layout_editor_absoluteX="24dp" />

                <TextView
                    android:id="@+id/tv_reg_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/register_password"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_city" />

                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:inputType="textPassword"
                    android:background="@drawable/input_auth"
                    android:hint="@string/password_hint"

                    app:layout_constraintTop_toBottomOf="@+id/tv_reg_pass"
                    android:paddingVertical="10dp"

                    android:paddingLeft="20dp"
                    tools:layout_editor_absoluteX="24dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/register"
                    android:layout_width="216dp"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="58dp"
                    android:background="@color/cta_purple"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_password" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>