<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.authentication.login.LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:scaleType="fitCenter"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="43dp"
        android:paddingTop="103dp"
        >

        <TextView
            android:id="@+id/halo_sobat_"
            android:layout_width="266dp"
            android:layout_height="62dp"
            android:layout_alignParentTop="true"
            android:gravity="top"
            android:text="@string/halo_sobat"
            android:textAppearance="@style/halo_sobat_"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/marketplace"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="top"
            android:text="@string/marketplace"
            android:textAppearance="@style/marketplace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/halo_sobat_" />


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="107dp"
            android:layout_marginBottom="88dp"
            android:paddingHorizontal="10dp"
            android:thicknessRatio="1.9"
            app:cardCornerRadius="41dp"
            app:cardElevation="4dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.537"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/marketplace"
            app:layout_constraintVertical_bias="1.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="32dp"
                android:paddingVertical="20dp">

                <TextView
                    android:id="@+id/masuk_ke_ak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="43dp"
                    android:layout_marginTop="44dp"
                    android:layout_marginEnd="38dp"
                    android:text="@string/login_title"
                    android:textAppearance="@style/masuk_ke_ak"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"

                    android:background="@drawable/input_auth"
                    android:hint="@string/login_email"
                    android:paddingVertical="10dp"

                    android:paddingLeft="20dp"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/masuk_ke_ak" />

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"

                    android:background="@drawable/input_auth"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"

                    android:paddingVertical="10dp"
                    android:paddingLeft="20dp"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_email" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login"
                    android:layout_width="216dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@color/cta_purple"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_password" />

                <TextView
                    android:id="@+id/register_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/belum_punya_akun"
                    android:textColor="@color/cta_purple"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>